add api add new image in post and delete image in post
