# controller/image_services/model/add.image.model.go
@@ -1,0 +1,5 @@
+package imagemodel
+
+type AddImageModel struct {
+	ImageUrl string `db:"image_url" json:"image_url"`
+}
